--- a/index.html
+++ b/index.html
@@ -140,8 +140,9 @@
                     </div>
                 </div>
             </div>
-            <div class="resume-column"></div>
-            <div class="resume-column"></div>
+            <div class="download-cv">
+            <button class="btn-primary">Download CV</button>
+        </div>
         </section>
     </main>
     <footer>
